--- a/time_series_analysis_histogram_extraction.ipynb
+++ b/time_series_analysis_histogram_extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "id": "fdcdc4a6",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "id": "4f3fb05c",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "id": "be54c5cb",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "id": "006031de",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "id": "a0e0074d",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        " '/eos/project/c/cmsml4dc/ML_2020/UL2018_Data/DF2018A_1D_Complete/ZeroBias_2018A_DataFrame_1D_9.csv']"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "id": "5732c7ca",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
        "4  255.5  -0.5     32     1     0      1  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "id": "5ee2b329",
    "metadata": {},
    "outputs": [],
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "id": "9385764e",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "id": "7864c493",
    "metadata": {},
    "outputs": [],
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "id": "86e300ad",
    "metadata": {},
    "outputs": [],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "id": "e21389a9",
    "metadata": {},
    "outputs": [],
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "id": "75853734",
    "metadata": {},
    "outputs": [
@@ -610,7 +610,7 @@
        "9  121292  [0, 2, 18, 66, 113, 157, 212, 193, 229, 272, 2...  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,17 +639,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 13,
    "id": "e2e3fe86",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f80d3786d00>"
+       "<matplotlib.legend.Legend at 0x7f233b3cff10>"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 14,
    "id": "91992ef3",
    "metadata": {},
    "outputs": [
@@ -702,7 +702,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1063/658436010.py:38: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_1312/658436010.py:38: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -935,7 +935,7 @@
        "[2080 rows x 10 columns]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 15,
    "id": "8cf815cc",
    "metadata": {},
    "outputs": [
@@ -1117,7 +1117,7 @@
        "66              4.627416        4.209213  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 16,
    "id": "2ad81a29",
    "metadata": {
     "scrolled": false
@@ -1141,7 +1141,7 @@
        "Text(0.5, 1.0, 'Run 316569')"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
